--- a/src/components/Cards/MainWeatherCard/MainWeatherCard.css
+++ b/src/components/Cards/MainWeatherCard/MainWeatherCard.css
@@ -1,7 +1,7 @@
 .main-weather-card {
-    flex: 1;
+    /* flex: 1; */
     max-width: 640px;
-    max-height: 300px;
+    /* max-height: 300px; */
 
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 270px;
+    /* height: 270px; */
     /* background-color: aliceblue; */
 }
 
@@ -180,4 +180,20 @@
     font-size: 15px;
     font-weight: 600;
     text-align: center;
+}
+
+
+@media (max-width: 480px) { 
+    
+    .main-weather-card {
+        /* height: fit-content; */
+    }
+
+    .temp-N-other-details{
+        /* height: fit-content; */
+    }
+.temp-N-alerts {
+    flex-direction: column-reverse;  
+  }
+
 }
