--- a/src/components/Cards/WeatherCardMini/WeatherCardMini.css
+++ b/src/components/Cards/WeatherCardMini/WeatherCardMini.css
@@ -102,3 +102,25 @@
 .cardm .card__menu button:hover {
     color: var(--accent-color, #4a90e2);
 }
+
+@media (max-width: 480px) {
+.mini-weather-cards {
+    position: fixed;
+    top: 160px;
+    right: 4px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    padding: 0.25rem;
+    /* background: var(--background-color); */
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    flex: 1;
+    overflow-x: auto;
+    scrollbar-width: none;
+    /* position: relative; */
+    /* position: relative; */
+    z-index: 1000;
+}
+}
