--- a/src/App.css
+++ b/src/App.css
@@ -125,12 +125,12 @@
 /* Sticky header inside the main content */
 .main-header {
   position: sticky;
-  top: 0;
+  top: -1px;
   z-index: 10;
-  background: linear-gradient(135deg, #1e3b72f5 0%, #2a5298f8 100%);
+  background: linear-gradient(135deg, #1e3b72f5 0%, #2a5298f8 100%,  #1e3b72f5 0%);
   padding: 2rem;
   padding-left: 1rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); */
 
   display: flex;
   align-items: center;
