--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,29 +4,48 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.1);
+  background: linear-gradient(135deg, #1e3b72f5 0%, #2a5298f8 100%,  #1e3b72f5 0%);
   backdrop-filter: blur(10px);
   color: var(--text-color);
-  padding: 1rem 2rem;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 1rem 2rem 0.25rem 4rem;
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.1); */
   position: relative;
   z-index: 10;
 }
 
 .header__brand {
+  margin-top: -1.75rem; 
+  margin-left: -1rem;
+  padding-top: 0.5rem;
+
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 0.5rem;
+
+  /* border-bottom: solid 1px rgba(255, 255, 255, 0.2);
+  border-radius: 0 5rem ; */
+
 }
 
 .header__title {
+  background-color: aliceblue;  
+  color: #1e3b72f5;
   font-size: 1.5rem;
   font-weight: 500;
+  /* text-decoration: underline; */
+
   margin: 0;
-  color: #fff;
+  padding: 1rem;
+  border-bottom-left-radius: 1.75rem;
+
+
 }
 
 .header__datetime {
+  padding-top: 0.25rem;
+  margin-bottom: 0.125rem;
+  padding-right: 0.5rem;
+
   font-size: 0.9rem;
   color: rgba(255, 255, 255, 0.7);
   font-weight: 400;
