--- a/src/components/Cards/WeatherCardMini/WeatherCardMini.css
+++ b/src/components/Cards/WeatherCardMini/WeatherCardMini.css
@@ -36,13 +36,13 @@
     align-items: center;
     justify-content: flex-start;
     background: var(--background-color);
-    padding: 0.35rem 0.8rem;
+    padding: 0.05rem 0.06125rem 0.025rem 0.5rem;
     border-radius: 12px;
     border: 1px solid var(--border-color, rgba(255, 255, 255, 0.1));
     transition: all 0.3s ease;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    width: 100%;
+    width: max-content;
     max-width: 200px;
     position: relative;
 }
@@ -90,6 +90,8 @@
 }
 
 .cardm .card__menu button {
+    display: flex;
+    justify-content: center;
     background: none;
     border: none;
     font-size: 1.2rem;
@@ -104,23 +106,8 @@
 }
 
 @media (max-width: 480px) {
-.mini-weather-cards {
-    position: fixed;
-    top: 160px;
-    right: 4px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 8px;
-    padding: 0.25rem;
-    /* background: var(--background-color); */
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    flex: 1;
-    overflow-x: auto;
-    scrollbar-width: none;
-    /* position: relative; */
-    /* position: relative; */
-    z-index: 1000;
-}
+    .mini-weather-cards {        
+        display: none;
+       
+    }
 }
