--- a/src/index.css
+++ b/src/index.css
@@ -18,16 +18,6 @@
   height: 100%;
 }
 
-.sidebar {
-  background-color: #f4f4f4;
-  position: fixed; 
-  top: 100px; 
-  left: 0;
-  width: 10%;
-  height: calc(100vh - 100px); 
-  padding: 8px;
-}
-
 .grid-main 
 {
   margin-left: 100%;
@@ -178,11 +168,7 @@
 @media (max-width: 1200px) {
   .grid-content {
     grid-template-columns: 12% 60% 30%; /* Slightly adjust for smaller screens */
-  }
-  .sidebar {
-    position: static; /* Remove fixed behavior for smaller screens */
-    width: 12%; /* Adjust sidebar width for smaller screens */
-  }
+  } 
   .grid-main {
     margin-left: 12%; /* Adjust space for the sidebar */
     margin-right: 30%; /* Adjust for the right column */
@@ -194,8 +180,8 @@
     grid-template-columns: 100%; /* Stack columns for smaller screens */
   }
 
-  .sidebar,
-  .right-column {
+  .sidebar
+  {
     display: none; /* Hide the sidebar and right column on smaller screens */
   }
 
