--- a/src/components/Forecast/Forecast.css
+++ b/src/components/Forecast/Forecast.css
@@ -5,6 +5,7 @@
   /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   margin: 8px 0;
    backdrop-filter: blur(100px);
+   width: 590px;
 }
 
 /* Tabs styles */
